--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -11,37 +11,37 @@
 *** xref:deployment/container/orchestration.adoc[Container Orchestration]
 *** xref:deployment/security/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
-*** xref:deployment/extensions/extensions.adoc[Extensions]
-**** xref:deployment/extensions/app-registry.adoc[App Registry]
-**** xref:deployment/extensions/app-provider.adoc[App Provider]
-**** xref:deployment/extensions/audit.adoc[Audit]
-**** xref:deployment/extensions/auth-basic.adoc[Auth Basic]
-**** xref:deployment/extensions/auth-bearer.adoc[Auth Bearer]
-**** xref:deployment/extensions/auth-machine.adoc[Auth Machine]
-**** xref:deployment/extensions/frontend.adoc[Frontend]
-**** xref:deployment/extensions/gateway.adoc[Gateway]
-**** xref:deployment/extensions/graph-explorer.adoc[Graph Explorer]
-**** xref:deployment/extensions/graph.adoc[Graph]
-**** xref:deployment/extensions/groups.adoc[Groups]
-**** xref:deployment/extensions/idm.adoc[IDM]
-**** xref:deployment/extensions/idp.adoc[IDP]
-**** xref:deployment/extensions/nats.adoc[NATS]
-**** xref:deployment/extensions/notifications.adoc[Notification]
-**** xref:deployment/extensions/ocdav.adoc[OCDAV]
-**** xref:deployment/extensions/ocs.adoc[OCS]
-**** xref:deployment/extensions/proxy.adoc[Proxy]
-**** xref:deployment/extensions/search.adoc[Search]
-**** xref:deployment/extensions/settings.adoc[Settings]
-**** xref:deployment/extensions/sharing.adoc[Sharing]
-**** xref:deployment/extensions/storage-publiclink.adoc[Storage-Publiclink]
-**** xref:deployment/extensions/storage-shares.adoc[Storage-Shares]
-**** xref:deployment/extensions/storage-system.adoc[Storage-System]
-**** xref:deployment/extensions/storage-users.adoc[Storage-Users]
-**** xref:deployment/extensions/store.adoc[Store]
-**** xref:deployment/extensions/thumbnails.adoc[Thumbnails]
-**** xref:deployment/extensions/users.adoc[Users]
-**** xref:deployment/extensions/web.adoc[Web]
-**** xref:deployment/extensions/webdav.adoc[WebDAV]
+*** xref:deployment/services/services.adoc[Services]
+**** xref:deployment/services/app-registry.adoc[App Registry]
+**** xref:deployment/services/app-provider.adoc[App Provider]
+**** xref:deployment/services/audit.adoc[Audit]
+**** xref:deployment/services/auth-basic.adoc[Auth Basic]
+**** xref:deployment/services/auth-bearer.adoc[Auth Bearer]
+**** xref:deployment/services/auth-machine.adoc[Auth Machine]
+**** xref:deployment/services/frontend.adoc[Frontend]
+**** xref:deployment/services/gateway.adoc[Gateway]
+**** xref:deployment/services/graph-explorer.adoc[Graph Explorer]
+**** xref:deployment/services/graph.adoc[Graph]
+**** xref:deployment/services/groups.adoc[Groups]
+**** xref:deployment/services/idm.adoc[IDM]
+**** xref:deployment/services/idp.adoc[IDP]
+**** xref:deployment/services/nats.adoc[NATS]
+**** xref:deployment/services/notifications.adoc[Notification]
+**** xref:deployment/services/ocdav.adoc[OCDAV]
+**** xref:deployment/services/ocs.adoc[OCS]
+**** xref:deployment/services/proxy.adoc[Proxy]
+**** xref:deployment/services/search.adoc[Search]
+**** xref:deployment/services/settings.adoc[Settings]
+**** xref:deployment/services/sharing.adoc[Sharing]
+**** xref:deployment/services/storage-publiclink.adoc[Storage-Publiclink]
+**** xref:deployment/services/storage-shares.adoc[Storage-Shares]
+**** xref:deployment/services/storage-system.adoc[Storage-System]
+**** xref:deployment/services/storage-users.adoc[Storage-Users]
+**** xref:deployment/services/store.adoc[Store]
+**** xref:deployment/services/thumbnails.adoc[Thumbnails]
+**** xref:deployment/services/users.adoc[Users]
+**** xref:deployment/services/web.adoc[Web]
+**** xref:deployment/services/webdav.adoc[WebDAV]
 // *** xref:deployment/deployment/deployment_examples.adoc[Deployment Examples]
 
 ////
