--- a/modules/ROOT/pages/deployment/services/idm.adoc
+++ b/modules/ROOT/pages/deployment/services/idm.adoc
@@ -18,7 +18,7 @@ NOTE: The IDM service is limited in its functionality. It only supports a subset
 == Default Values
 
 * IDM listens on port 9325 by default.
-* In the default configuration it only accepts TLS protected connections (LDAPS).
+* In the default configuration it only accepts TLS-protected connections (LDAPS).
 * The BaseDN of the LDAP tree is `o=libregraph-idm`.
 * IDM gives LDAP write permissions to a single user +
 (DN: `uid=libregraph,ou=sysusers,o=libregraph-idm`). Any other authenticated user has read-only access.
@@ -28,7 +28,7 @@ NOTE: The IDM service is limited in its functionality. It only supports a subset
 
 === TLS Server Certificates
 
-By default, IDM generates a self-signed certificate and key on first startup to be able to provide TLS protected services. The certificate is stored in `idm/ldap.crt` inside the Infinite Scale xref:deployment/general/general-info.adoc#define-the-infinite-scale-data-path[base data directory]. The key is in `idm/ldap.key` in the same directory. You can use a custom server certificate by setting the `IDM_LDAPS_CERT` and `IDM_LDAPS_KEY`.
+By default, IDM generates a self-signed certificate and key on first startup to be able to provide TLS-protected services. The certificate is stored in `idm/ldap.crt` inside the Infinite Scale xref:deployment/general/general-info.adoc#define-the-infinite-scale-data-path[base data directory]. The key is in `idm/ldap.key` in the same directory. You can use a custom server certificate by setting the `IDM_LDAPS_CERT` and `IDM_LDAPS_KEY`.
 
 === Default and Demo Users
 
