Fixes and updates to services

--- a/modules/ROOT/pages/deployment/services/ocs.adoc
+++ b/modules/ROOT/pages/deployment/services/ocs.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: ocs
 
-:description: The Infinite Scale OCS service provides ...
+:description: The Infinite Scale OCS service provides the OCS API which is required by some ownCloud clients.
 
 == Introduction
 
